--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
 version: '3.9'
 
 services:
-    fintech_conference_2025_website:
-        build:
-            context: .
-            dockerfile: Dockerfile
+    website:
+        image: docker.io/library/fintech_conference_2023-website:latest
         container_name: fintech_conference_2025_website
         restart: unless-stopped
         tty: true
         environment:
             SERVICE_NAME: fintech_conference_2025_website
-            SERVICE_TAGS: dev
         working_dir: /var/www
         ports:
             - "9025:9000"
@@ -19,19 +16,6 @@ services:
             - ./php/php.ini:/usr/local/etc/php/php.ini
         networks:
             - fintech_highlight_app-network
-
-    # fintech_conference_2024_webserver:
-    #     image: nginx:alpine
-    #     container_name: fintech_conference_2024_webserver
-    #     restart: unless-stopped
-    #     tty: true
-    #     ports:
-    #         - "10027:80"
-    #     volumes:
-    #         - ./:/var/www
-    #         - ./nginx/conf.d/:/etc/nginx/conf.d/
-    #     networks:
-    #         - fintech_highlight_app-network
 
 networks:
   fintech_highlight_app-network:
